Performance tuning
- Set appropriate JVM defaults in standalone.conf
- Add recommended parameters for other heap sizes
- Add domain scripts so that we can customize them
- Set appropriate JVM defaults in domain template.xml